--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
+#cover {
+  background: url('images/IMG_7077.jpg') center center no-repeat ;
+  background-size: cover;
+  text-align: center;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+article{
+  color: white; 
+}
 body {
     background-color: #B2AC88;
   }
@@ -6,17 +18,6 @@ body {
     color: #B2AC88 !important;
   }
  
-  .logobox{
-    width: 100%;
-    height: 100%;
-    object-position: center;
-  }
-
-  .c-logo{
-    object-fit: contain;
-    height: 400px;    
-  }
-  
   .c-img{
   object-fit: contain;
   object-position: center;
@@ -66,5 +67,4 @@ body {
     margin-left: 10px;
   }
   
-
-
+ 
